# eoka-tools

./: .gitignore  ANTI_CAPTCHA_GUIDE.md  Cargo.toml  PLAN.md  README.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml
configs/: challenge-step1.yaml
crates/eoka-agent/: Cargo.toml  README.md
crates/eoka-agent/examples/: agent_loop.rs  batch_opencorporates.rs  benchmark.rs  demo.rs  epstein_debug.rs  epstein_search.rs  recon_agent.rs  stealth_test.rs  take_screenshot.rs
crates/eoka-agent/src/: captcha.rs  lib.rs  mcp.rs  observe.rs  target.rs
crates/eoka-agent/src/spa/: detect.rs  mod.rs  navigate.rs
crates/eoka-agent/tests/: integration.rs
crates/eoka-email/: Cargo.toml  README.md
crates/eoka-email/src/: lib.rs
crates/eoka-runner/: Cargo.toml  README.md
crates/eoka-runner/configs/: example.yaml  login.yaml  search.yaml
crates/eoka-runner/configs/flows/: dismiss_cookies.yaml
crates/eoka-runner/src/: lib.rs
crates/eoka-runner/src/config/: actions.rs  mod.rs  params.rs  schema.rs
crates/eoka-runner/src/runner/: executor.rs  mod.rs
docs/: browser-challenge-analysis.md
examples/: agent_loop.rs  benchmark.rs  demo.rs  generic_agent.rs  recon_agent.rs  stealth_test.rs
src/: annotate.rs  lib.rs  main.rs  mcp.rs  observe.rs
tests/: integration.rs
