[package]
name = "eoka-email"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cbxss/eoka-tools"
description = "IMAP helpers for email-based automation (OTP codes, verification links)"

[dependencies]
# NOTE: alpha — pin to exact version, API may change before 3.0 stable
imap = "=3.0.0-alpha.15"
native-tls = "0.2"
chrono = { version = "0.4", features = ["clock"] }
regex = "1"
mailparse = "0.14"
thiserror = "1"
url = "2"
tokio = { version = "1", features = ["time", "rt", "rt-multi-thread"], optional = true }

[features]
async = ["tokio"]
