[package]
name = "eoka-runner"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Config-based browser automation — define actions in YAML, execute deterministically"
keywords = ["browser", "automation", "yaml", "scripting", "cli"]
categories = ["web-programming", "development-tools", "command-line-utilities"]
repository = "https://github.com/cbxss/eoka-tools"
homepage = "https://github.com/cbxss/eoka-tools"
documentation = "https://docs.rs/eoka-runner"
readme = "README.md"
authors = ["cbxss"]

[[bin]]
name = "eoka-runner"
path = "src/bin/main.rs"

[dependencies]
eoka = "0.3.4"
eoka-email = { path = "../eoka-email", features = ["async"] }
chrono = { version = "0.4", features = ["clock"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
